--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="modal">
         <button class="modalbtn">Show Modal</button>
         <div class="modalContent">
-          <div class="modalHeader">This is Modal</div>
+          <div class="modalHead">This is Modal</div>
           <hr />
           <div class="modalBody">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
